[gd_scene load_steps=5 format=3 uid="uid://cehloeshwkxe6"]

[ext_resource type="Script" uid="uid://dqwdsxds0te7k" path="res://Scripts/managers/fight_spawner.gd" id="1_m8nj4"]

[sub_resource type="Curve3D" id="Curve3D_8as5x"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_476at"]
size = Vector3(1.43, 5, 4)

[sub_resource type="BoxShape3D" id="BoxShape3D_8as5x"]
size = Vector3(3.41, 5, 0.285)

[node name="Fight" type="Node3D" node_paths=PackedStringArray("spawn_area_hitbox", "fight_area_hitbox", "path")]
script = ExtResource("1_m8nj4")
spawn_area_hitbox = NodePath("SpawnEnemies/CollisionShape3D")
fight_area_hitbox = NodePath("StartFight/CollisionShape3D")
path = NodePath("enemy_parent")
enemy_separation = 1.0

[node name="enemy_parent" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)
curve = SubResource("Curve3D_8as5x")
debug_custom_color = Color(1, 0, 0, 1)

[node name="LookAt" type="Marker3D" parent="enemy_parent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0164963, 0)

[node name="SpawnEnemies" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnEnemies"]
shape = SubResource("BoxShape3D_476at")
debug_color = Color(0, 0.5019608, 1, 1)

[node name="StartFight" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="StartFight"]
shape = SubResource("BoxShape3D_8as5x")
debug_color = Color(1, 0, 0.23921569, 1)

[node name="PivotLabel" type="Label3D" parent="."]
layers = 524288
billboard = 1
text = "Ennemy Pivot"

[connection signal="body_entered" from="SpawnEnemies" to="." method="on_spawn_enemies_enter" flags=6]
[connection signal="body_entered" from="StartFight" to="." method="on_start_fight_entered" flags=6]
